Fix landscape font scaling on iOS Safari

--- a/river.css
+++ b/river.css
@@ -18,6 +18,8 @@ body {
 
 	-webkit-user-select: none;
 	user-select: none;
+
+	-webkit-text-size-adjust: 100%;
 }
 
 body, .search {
